--- a/src/Assets/css/search.css
+++ b/src/Assets/css/search.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   width: 100%;
   background: #131313;
 }
@@ -32,6 +32,7 @@ form {
 .logo {
   position: absolute;
   top: -60px;
+  cursor: pointer;
 }
 .heading {
   position: absolute;
@@ -40,7 +41,7 @@ form {
 .heading p {
   color: rgba(255, 255, 255, 0.513);
 }
-.search_bar form input[type='text'] {
+.search_bar form input[type="text"] {
   height: 100%;
   width: 100%;
   border: none;
@@ -50,7 +51,7 @@ form {
   font-weight: bold;
   color: rgb(110, 110, 110);
 }
-.search_bar form input[type='text']::placeholder {
+.search_bar form input[type="text"]::placeholder {
   color: rgb(189, 188, 188);
   font-weight: 300;
 }
@@ -66,6 +67,7 @@ form {
     rgb(153, 51, 255) 0%,
     rgb(255, 102, 102) 100%
   );
+  cursor: pointer;
 }
 
 .gif_container {
@@ -96,6 +98,7 @@ form {
   color: white;
   font-size: 20px;
   border-radius: 5px;
+  cursor: pointer;
 }
 .pagination button:hover {
   background: linear-gradient(
@@ -111,7 +114,7 @@ form {
   .gif_container img {
     height: 200px;
   }
-  .search_bar form input[type='text'] {
+  .search_bar form input[type="text"] {
     font-size: 15px;
   }
 }
@@ -120,7 +123,7 @@ form {
   .gif_container {
     grid-template-columns: repeat(3, 1fr);
   }
-  .search_bar form input[type='text'] {
+  .search_bar form input[type="text"] {
     font-size: 15px;
   }
   .pagination button {
@@ -138,7 +141,7 @@ form {
   .gif_container {
     grid-template-columns: repeat(2, 1fr);
   }
-  .search_bar form input[type='text'] {
+  .search_bar form input[type="text"] {
     font-size: 12px;
     padding: 0 10px;
   }
